Fixing the table header gap
Fixing the table header gap by adding -5 pixels to the top of the table header thead

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@
 
 thead {
     position: sticky;
-    top: -1px; /* Don't forget this, required for the stickiness */
+    top: -6px; /* Don't forget this, required for the stickiness */
     background: white;
     margin: 0;
     padding: 0;
